# test_voice_agent

./: .gitignore  AZURE_OPENAI_GUIDE.md  DOCUMENTATION_UPDATES.md  Dockerfile  QUICK_REFERENCE_UPDATED.md  QUICK_START.md  README.md  SONIOX_CONTEXT_UPGRADE.md  bot.py  env.example  pcc-deploy.toml  pyproject.toml  resource_document.txt
