[project]
name = "pipecat-agent_v1"
version = "0.1.0"
description = "Telugu voice AI assistant for agriculture and bio-fertilizers"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[azure,cartesia,daily,deepgram,elevenlabs,google,local-smart-turn-v3,openai,runner,sarvam,silero,soniox,webrtc]",
    "pipecat-ai-cli",
    "pypdf2>=3.0.0",
    "pydub>=0.25.1",
    "pipecat-murf-tts>=0.1.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
