[project]
name = "pipecat-agent_v1"
version = "0.1.0"
description = "Telugu voice AI assistant for agriculture and bio-fertilizers"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pipecat-ai[azure,cartesia,daily,deepgram,elevenlabs,google,local-smart-turn-v3,openai,runner,sarvam,silero,soniox,webrtc]",
    "pipecat-ai-cli",
    "pypdf2>=3.0.0",
    "pydub>=0.25.1",
    "pipecat-murf-tts>=0.1.2",
]
